--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <head>
         <meta charset="UTF-8" />
         <title>Run Buddy title</title>
+        <!--link to css-->
+        <link rel="stylesheet" type="text/css" href="./assets/css/style.css"/>
     </head>
     <body>
         <!--Navigation-->
