--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                   seitan heirloom post-ironic pop-up iPhone mlkshk hella selfies fashion axe occupy readymade put a bird on it messenger bag Wes Anderson Schlitz plaid Bushwick church-key lo-fi skateboard slow-carb hashtag trust fund Williamsburg biodiesel fixie farm-to-table 8-bit banjo XOXO Banksy chillwave bicycle rights retro cliche tattooed bespoke irony mumblecore Shoreditch deep v polaroid McSweeney's bitters cray gentrify tofu Marfa you probably haven't heard of them yr banh mi asymmetrical art party selvage letterpress High Life.
                 </p>
             </div>
-            
+
             <div class="hero-form">
                 <h3>Get Started Today</h3>
                 <p>Fill out this form and one of our trainers will schedule a consult</p>
@@ -80,13 +80,17 @@
         </section>
 
         <!--"what we do" section-->    
-        <section id="what-we-do" class="intro">
-            <h2 class="section-title primary-border">What We Do</h2>
+        <section id="what-we-do" class="flex-row intro">
+            <h2 class="section-title primary-border">
+                What We Do
+            </h2>
+            <div class="flex-row">
             <p>
                 butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle 
                 chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes 
                 Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft
             </p>
+            </div>
         </section>
         
         <!--"what you do" section-->
